Fix "visit" button alignment

--- a/project/styles.css
+++ b/project/styles.css
@@ -596,7 +596,7 @@ nav {
         flex-direction: column;
         align-items: flex-start;
     }
-    .download-button {
+    .download-button .access-button {
         margin-top: 10px;
         align-self: flex-end;
     }
